# i-lib

./: .gitignore  CMakeLists.txt  README.md
docs/rst/: modules.rst
docs/source/: conf.py  index.rst
examples/: CMakeLists.txt  executor.cpp  format.cpp  io.cpp  iterators.cpp  lazy.cpp  scope.cpp  static_string.cpp  static_vector.cpp  task.cpp
include/ilib/: concepts.hpp  config.hpp  format.hpp  functional.hpp  iterators.hpp  lazy.hpp  lifetime.hpp  option.hpp  result.hpp  scope.hpp  static_string.hpp  static_vector.hpp  string.hpp  traits.hpp  units.hpp  utility.hpp
include/ilib/async/: executor.hpp  generator.hpp  includes.hpp  sync_wait.hpp  task.hpp
include/ilib/async/io/: README.md  file.hpp  io.hpp
include/ilib/detail/: macros.hpp
include/ilib/utility/: iterators.hpp  lazy.hpp  option.hpp  result.hpp  scope.hpp  utility.hpp
tests/: CMakeLists.txt  containers.cpp  generator.cpp  task.cpp  utility.cpp
