cmake_minimum_required(VERSION 3.5)
project(ilib CXX)

option(compile_hidden "compile hidden folder, for debugging pruposes only" OFF)
option(run_examples "compile the examples" ON)
option(run_tests "compile the test" ON)

function(add_warns exc)
    set(msvc_warns /W4 /permissive)
    set(gcc_clang_warns -Wextra -Wall -Wpedantic)
    if(MSVC)
        set(warns ${msvc_warns})
    elseif(${CMAKE_CXX_COMPILER_ID} MATCHES ".*Clang" OR ${CMAKE_CXX_COMPILER_ID} MATCHES "GNU")
        set(warns ${gcc_clang_warns})
    else()
        message(AUTHOR_WARNING "couldn't detect compiler for warnings")
    endif()
    target_compile_options(${exc} PUBLIC ${warns})
endfunction()

if(run_examples)
    add_subdirectory(examples)
endif()
if(run_tests)
    add_subdirectory(tests)
endif()
if(compile_hidden)
    add_subdirectory(hidden)
endif()
